--- a/pages/servicios.css
+++ b/pages/servicios.css
@@ -235,7 +235,7 @@
     .services-to-give{
       background-size: cover; 
       background-position: center;
-      background-image: url(/img/services&portfolio-background-image.png);
+      background-image: url("../img/services&portfolio-background-image.png");
     }
   }  
 
